FC-T66 fixed actions alignment

--- a/src/app/components/list/list.component.scss
+++ b/src/app/components/list/list.component.scss
@@ -74,6 +74,7 @@
   .fs-list-filters {
     .fs-list-actions {
       margin-left: 10px;
+      float: right;
 
       .action-button mat-icon {
         margin-right: 5px;
